# WorkoutServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  cmake_config_log.txt  vcpkg.json
_intermidiate_64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ServerWorkout.sln  WorkoutServer.vcxproj  WorkoutServer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
public/: index.html
src/: Db.cpp  Db.h  main.cpp
